fix(elements): icon svg alignment
- internal alignement relative to host

--- a/projects/elements/src/icon/icon.css
+++ b/projects/elements/src/icon/icon.css
@@ -10,6 +10,8 @@
   width: var(--width);
   height: var(--height);
   place-self: center;
+  display: flex;
+  place-items: center;
 }
 
 svg {
